--- a/myapp/templates/myapp/index.html
+++ b/myapp/templates/myapp/index.html
@@ -6,6 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>DjReact</title>
+    <a href="{% url 'logout' %}?next={{ request.path }}">Logout</a>
 </head>
 <body>
     <div id='root'>
