--- a/myapp/templates/myapp/index.html
+++ b/myapp/templates/myapp/index.html
@@ -6,7 +6,12 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>DjReact</title>
+    {% if request.user.is_authenticated %}
     <a href="{% url 'logout' %}?next={{ request.path }}">Logout</a>
+    {% else %}
+    <a href="{% url 'login' %}?next={{ request.path }}">Login</a>
+    {% endif %}
+
 </head>
 <body>
     <div id='root'>
