--- a/templates/registration/register.html
+++ b/templates/registration/register.html
@@ -10,7 +10,7 @@
             {% csrf_token %}
             {{ form.as_p }}
             <button type="submit">register</button>
-            <p> Already registered? Login <a href={% url 'login' %}>here</a></p>
+            <p> Already registered? Login <a href="{% url 'login' %}?next={{ next }}">here</a></p>
         </form>
     </body>
 </html>
