sent data from django to react without api

--- a/myapp/templates/myapp/index.html
+++ b/myapp/templates/myapp/index.html
@@ -11,9 +11,9 @@
     {% else %}
     <a href="{% url 'login' %}?next={{ request.path }}">Login</a>
     {% endif %}
-
 </head>
 <body>
+    {{department_choices|json_script:'json-dep-choices'}}
     <div id='root'>
     <script src="{% static 'index-bundle.js' %}"></script>
     </div>
