decoupled frontend dependence to django urls

--- a/myapp/templates/myapp/index.html
+++ b/myapp/templates/myapp/index.html
@@ -16,6 +16,11 @@
 <body>
     {{department_choices|json_script:'json-dep-choices'}}
     <div id='root'>
+    <script>
+        const URLS = {
+            LIST_EMPLOYEES: "{% url 'api:employees-list' %}",
+          };
+    </script>
     <script src="{% static 'index-bundle.js' %}"></script>
     </div>
 </body>
